# DIT168Grp12

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Example.cpp  LICENSE.md  README.md  configuration  docker-compose.yml
Interceptor/: Dockerfile.armhf  Interceptor.cpp
imu/: CMakeLists.txt  Dockerfile.armhf  IMU.cpp  IMU.cpp.save  messages.odvd
internal-services/: Messages.odvd  internal_service.cpp  internal_service.hpp
src/: CMakeCache.txt  CMakeLists.txt  Makefile  Prime.cpp  Receiver.cpp  Reciever.cpp  Reciever.hpp  Sender.cpp  Sender.hpp  TestPrimeChecker.cpp  cmake_install.cmake  messages.odvd
src/src/: Makefile  Prime  cmake_install.cmake
v2v-protocol/: Dockerfile.armhf  Internal Service.txt  Messages.odvd  V2VService.cpp  V2VService.hpp
web/: Dockerfile.armhf
web/src/: messages.odvd
