cmake_minimum_required(VERSION 3.2)
project(Prime)
set(CMAKE_CXX_STANDARD 14)

find_package(libcluon REQUIRED)
include_directories(SYSTEM ${CLUON_INCLUDE_DIRS})

add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/messages.cpp
                   WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
                   COMMAND cluon-msc --cpp-sources --cpp-add-include-file=messages.hpp --out=${CMAKE_BINARY_DIR}/messages.cpp ${CMAKE_CURRENT_SOURCE_DIR}/messages.odvd
                   COMMAND cluon-msc --cpp-headers --out=${CMAKE_BINARY_DIR}/messages.hpp ${CMAKE_CURRENT_SOURCE_DIR}/messages.odvd
DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/messages.odvd)

add_executable(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/Prime.cpp ${CMAKE_CURRENT_SOURCE_DIR}/PrimeChecker.cpp)
target_link_libraries(${PROJECT_NAME} ${CLUON_LIBRARIES})

add_executable(Send ${CMAKE_CURRENT_SOURCE_DIR}/Sender.cpp ${CMAKE_BINARY_DIR}/messages.cpp)
target_link_libraries(Send ${CLUON_LIBRARIES})

add_executable(Recieve ${CMAKE_CURRENT_SOURCE_DIR}/Reciever.cpp ${CMAKE_BINARY_DIR}/messages.cpp)
target_link_libraries(Recieve ${CLUON_LIBRARIES})
